--- a/portfolio.html
+++ b/portfolio.html
@@ -13,12 +13,13 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- =========header========= -->
     <header>
       <nav>
         <a class="logo" href="./index.html"
-          ><span class="logo-Web">Web</span>Studio</a
+          ><span class="logo-web">Web</span>Studio</a
         >
-        <ul>
+        <ul class="list">
           <li>
             <a class="link-first" href="./index.html">Studio</a>
           </li>
@@ -27,7 +28,7 @@
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="list">
           <li>
             <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -40,131 +41,134 @@
       </address>
     </header>
     <main>
+      <!-- ========button======= -->
       <section class="filter">
         <h2 class="visually-hidden">filter</h2>
-        <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+        <ul class="list">
+          <li><button type="button" class="filter-btn">All</button></li>
+          <li><button type="button" class="filter-btn">Web Site</button></li>
+          <li><button type="button" class="filter-btn">App</button></li>
+          <li><button type="button" class="filter-btn">Design</button></li>
+          <li><button type="button" class="filter-btn">Marketing</button></li>
         </ul>
+        <!-- ========elements======== -->
         <h2 class="visually-hidden">portfolio elements</h2>
-        <ul>
+        <ul class="list">
           <li>
-            <a href="#"
+            <a class="link" href="#"
               ><img
                 src="./images/portfolio-img-1.jpg"
                 alt="Banking App Interface Concept"
                 width="360"
                 height="300"
               />
-              <h3 class="text-features-title">Banking App Interface Concept</h3>
-              <p class="text-features-p">App</p></a
+              <h3 class="features-title">Banking App Interface Concept</h3>
+              <p class="text-features">App</p></a
             >
           </li>
           <li>
-            <a href="#"
+            <a class="link" href="#"
               ><img
                 src="./images/portfolio-img-2.jpg"
                 alt="Cashless Payment"
                 width="360"
                 height="300"
               />
-              <h3 class="text-features-title">Cashless Payment</h3>
-              <p class="text-features-p">Marketing</p></a
+              <h3 class="features-title">Cashless Payment</h3>
+              <p class="text-features">Marketing</p></a
             >
           </li>
           <li>
-            <a href="#">
+            <a class="link" href="#">
               <img
                 src="./images/portfolio-img-3.jpg"
                 alt="Meditaion App"
                 width="360"
                 height="300"
               />
-              <h3 class="text-features-title">Meditaion App</h3>
-              <p class="text-features-p">App</p></a
+              <h3 class="features-title">Meditaion App</h3>
+              <p class="text-features">App</p></a
             >
           </li>
           <li>
-            <a href="#">
+            <a class="link" href="#">
               <img
                 src="./images/portfolio-img-4.jpg"
                 alt="Taxi Service"
                 width="360"
                 height="300"
               />
-              <h3 class="text-features-title">Taxi Service</h3>
-              <p class="text-features-p">Marketing</p></a
+              <h3 class="features-title">Taxi Service</h3>
+              <p class="text-features">Marketing</p></a
             >
           </li>
           <li>
-            <a href="#"
+            <a class="link" href="#"
               ><img
                 src="./images/portfolio-img-5.jpg"
                 alt="Screen Illustrations"
                 width="360"
                 height="300"
               />
-              <h3 class="text-features-title">Screen Illustrations</h3>
-              <p class="text-features-p">Design</p></a
+              <h3 class="features-title">Screen Illustrations</h3>
+              <p class="text-features">Design</p></a
             >
           </li>
           <li>
-            <a href="#">
+            <a class="link" href="#">
               <img
                 src="./images/portfolio-img-6.jpg"
                 alt="Online Courses"
                 width="360"
                 height="300"
               />
-              <h3 class="text-features-title">Online Courses</h3>
-              <p class="text-features-p">Marketing</p></a
+              <h3 class="features-title">Online Courses</h3>
+              <p class="text-features">Marketing</p></a
             >
           </li>
           <li>
-            <a href="#"
+            <a class="link" href="#"
               ><img
                 src="./images/portfolio-img-7.jpg"
                 alt="Instagram Stories Concept"
                 width="360"
                 height="300"
               />
-              <h3 class="text-features-title">Instagram Stories Concept</h3>
-              <p class="text-features-p">Design</p></a
+              <h3 class="features-title">Instagram Stories Concept</h3>
+              <p class="text-features">Design</p></a
             >
           </li>
           <li>
-            <a href="#"
+            <a class="link" href="#"
               ><img
                 src="./images/portfolio-img-8.jpg"
                 alt="Organic Food"
                 width="360"
                 height="300"
               />
-              <h3 class="text-features-title">Organic Food</h3>
-              <p class="text-features-p">Web Site</p></a
+              <h3 class="features-title">Organic Food</h3>
+              <p class="text-features">Web Site</p></a
             >
           </li>
           <li>
-            <a href="#"
+            <a class="link" href="#"
               ><img
                 src="./images/portfolio-img-9.jpg"
                 alt="Fresh Coffee"
                 width="360"
                 height="300"
               />
-              <h3 class="text-features-title">Fresh Coffee</h3>
-              <p class="text-features-p">Web Site</p></a
+              <h3 class="features-title">Fresh Coffee</h3>
+              <p class="text-features">Web Site</p></a
             >
           </li>
         </ul>
       </section>
     </main>
-    <footer>
+    <!-- =========footer========= -->
+    <footer class="footer">
       <a class="logo" href="./index.html"
-        ><span class="logo-Web">Web</span
+        ><span class="logo-web">Web</span
         ><span class="logo-footer-studio">Studio</span>
       </a>
       <p class="footer-text">
