--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css"/>
   </head>
   <!-- =========header========= -->
   <body>
     <header>
       <nav>
         <a class="logo" href="./index.html"
-          ><span class="logo-Web">Web</span>Studio</a>
-        <ul>
+          ><span class="logo-web">Web</span>Studio</a>
+        <ul class="list">
           <li>
             <a class="link-first" href="./index.html">Studio</a>
           </li>
@@ -28,7 +28,7 @@
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="list">
           <li>
             <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -41,42 +41,42 @@
       </address>
     </header>
     <main>
-      <!-- =========hero=========== -->
+      <!-- =========hero========== -->
       <section class="hero">
-        <h1>
-          Effective Solutions <br />
+        <h1 class="hero-title">
+          Effective Solutions <br>
           for Your Business
         </h1>
-        <button class="button-hirou" type="button">Order Service</button>
+        <button class="btn-hero" type="button">Order Service</button>
       </section>
       <!-- =========features========= -->
       <section>
         <h2 class="visually-hidden">features</h2>
-        <ul>
+        <ul class="list">
           <li>
-            <h3 class="text-features-title">Strategy</h3>
-            <p class="text-features-p">
+            <h3 class="features-title">Strategy</h3>
+            <p class="text-features">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="text-features-title">Punctuality</h3>
-            <p class="text-features-p">
+            <h3 class="features-title">Punctuality</h3>
+            <p class="text-features">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="text-features-title">Diligence</h3>
-            <p class="text-features-p">
+            <h3 class="features-title">Diligence</h3>
+            <p class="text-features">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="text-features-title">Technologies</h3>
-            <p class="text-features-p">
+            <h3 class="features-title">Technologies</h3>
+            <p class="text-features">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -86,7 +86,7 @@
       <!-- =========gallery========= -->
       <section>
         <h2 class="text-what-are">What are we doing</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/pic1.jpg"
@@ -115,8 +115,8 @@
       </section>
       <!-- ==========team========== -->
       <section class="section-our-team">
-        <h2 class="text-our-team">Our Team</h2>
-        <ul>
+        <h2 class="title-our-team">Our Team</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/photo1.jpg"
@@ -124,8 +124,8 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="name-our-team">Mark Guerrero</h3>
+            <p class="text-our-team">Product Designer</p>
           </li>
           <li>
             <img
@@ -134,8 +134,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name-our-team">Tom Ford</h3>
+            <p class="text-our-team">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -144,8 +144,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="name-our-team">Camila Garcia</h3>
+            <p class="text-our-team">Marketing</p>
           </li>
           <li>
             <img
@@ -154,16 +154,16 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="name-our-team">Daniel Wilson</h3>
+            <p class="text-our-team">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- =========footer========= -->
-    <footer>
+    <footer class="footer">
       <a class="logo" href="./index.html"
-        ><span class="logo-Web">Web</span
+        ><span class="logo-web">Web</span
         ><span class="logo-footer-studio">Studio</span>
       </a>
       <p class="footer-text">
